feat(firebase): implement analytics

--- a/assets/translations/tr-TR.json
+++ b/assets/translations/tr-TR.json
@@ -70,7 +70,7 @@
             "country": "Ülke:",
             "awards": "Ödüller:",
             "coming_soon": "Çok Yakında",
-            "extra_images": "Ek Görseller:"
+            "extra_images": "Ek Görseller"
         }
     },
     "profile": {
